--- a/CSCI340Databases/Project2/psqlWithLanguage.ipynb
+++ b/CSCI340Databases/Project2/psqlWithLanguage.ipynb
@@ -22,7 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs = pd.read_sql_query('SELECT title FROM Posts WHERE posttypeid = 1 ORDER BY score DESC LIMIT 10;',engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +79,26 @@
        "      <th>4</th>\n",
        "      <td>What is this colored fiber in my chicken?</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Is it possible to cook a whole fish in a dishw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>How do you properly cook a steak?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>How can I tell the difference between a rabbit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Why use milk in scrambled eggs?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Is it safe to leave butter at room temperature?</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -80,16 +109,59 @@
        "1  Translating cooking terms between US / UK / AU...\n",
        "2      Why add salt to the water when cooking pasta?\n",
        "3  Why would boiling milk in an electric kettle b...\n",
-       "4          What is this colored fiber in my chicken?"
+       "4          What is this colored fiber in my chicken?\n",
+       "5  Is it possible to cook a whole fish in a dishw...\n",
+       "6                  How do you properly cook a steak?\n",
+       "7  How can I tell the difference between a rabbit...\n",
+       "8                    Why use milk in scrambled eggs?\n",
+       "9    Is it safe to leave butter at room temperature?"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql_query('SELECT title FROM Posts WHERE posttypeid = 1 ORDER BY score DESC LIMIT 5;',engine)"
+    "qs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titles = list(qs['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['How can I chop onions without crying?',\n",
+       " 'Translating cooking terms between US / UK / AU / CA / NZ',\n",
+       " 'Why add salt to the water when cooking pasta?',\n",
+       " 'Why would boiling milk in an electric kettle break the kettle?',\n",
+       " 'What is this colored fiber in my chicken?',\n",
+       " 'Is it possible to cook a whole fish in a dishwasher?',\n",
+       " 'How do you properly cook a steak?',\n",
+       " 'How can I tell the difference between a rabbit and a cat?',\n",
+       " 'Why use milk in scrambled eggs?',\n",
+       " 'Is it safe to leave butter at room temperature?']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles"
    ]
   },
   {
@@ -97,7 +169,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now we can use python to do stuff with the data"
+   ]
   }
  ],
  "metadata": {
