--- a/CSCI340Databases/Project2/psqlWithLanguage.ipynb
+++ b/CSCI340Databases/Project2/psqlWithLanguage.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Run Querys and Explain what they do"
+    "# Part 1: Run Queries and Explain what they do"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "source": [
     "pd.read_sql_query(\n",
     "    ''' \n",
-    "    SELECT id,char_length(tags) - char_length(replace(tags,'<','')) FROM posts where tags ~ '[^0-9]' ORDER BY 2 desc LIMIT 1\n",
+    "    SELECT id, char_length(tags) - char_length(replace(tags,'<','')) FROM posts where tags ~ '[^0-9]' ORDER BY 2 desc LIMIT 1\n",
     "    '''\n",
     "    ,engine)"
    ]
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3081</td>\n",
+       "      <td>10175</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -430,10 +430,10 @@
       ],
       "text/plain": [
        "   count\n",
-       "0   3081"
+       "0  10175"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
     "    '''   \n",
     "    SELECT COUNT(F.date_part) from\n",
     "        (SELECT X.date_part from\n",
-    "            (SELECT EXTRACT(DOW FROM lasteditdate) FROM posts)\n",
+    "            (SELECT EXTRACT(DOW FROM creationdate) FROM posts)\n",
     "            as X\n",
     "        WHERE date_part = 5)\n",
     "        as F\n",
@@ -460,44 +460,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-7841e486307e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m pd.read_sql_query(\n\u001b[0m\u001b[0;32m      2\u001b[0m     '''   \n\u001b[0;32m      3\u001b[0m     \u001b[0mDO\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m$\u001b[0m\u001b[0;31m$\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mBEGIN\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mFOR\u001b[0m \u001b[0mi\u001b[0m \u001b[0mIN\u001b[0m \u001b[1;36m1.\u001b[0m\u001b[1;36m.12\u001b[0m \u001b[0mLOOP\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>date_part</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>46146</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3794</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3721</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1903</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1837</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1775</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1726</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1704</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1682</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1677</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1665</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1453</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1358</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    count  date_part\n",
+       "0   46146        NaN\n",
+       "1    3794        3.0\n",
+       "2    3721        4.0\n",
+       "3    1903        8.0\n",
+       "4    1837       12.0\n",
+       "5    1775        7.0\n",
+       "6    1726        9.0\n",
+       "7    1704       10.0\n",
+       "8    1682        1.0\n",
+       "9    1677        2.0\n",
+       "10   1665       11.0\n",
+       "11   1453        5.0\n",
+       "12   1358        6.0"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_sql_query(\n",
-    "    '''   \n",
-    "    DO $$\n",
-    "    BEGIN\n",
-    "    FOR i IN 1..12 LOOP\n",
-    "        SELECT COUNT(F.date_part) from\n",
-    "            (SELECT X.date_part from\n",
-    "                (SELECT EXTRACT(MONTH FROM lasteditdate) FROM posts)\n",
-    "                as X\n",
-    "            WHERE date_part = i)\n",
-    "            as F;\n",
-    "    END LOOP;\n",
-    "    END; $$\n",
     "    '''\n",
-    "    ,engine)\n"
+    "        select count(id),extract(month from lasteditdate) from posts group by extract(month from lasteditdate) order by count desc\n",
+    "    '''\n",
+    ",engine)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In class: Find the user with the most reputation"
+    "It appears that March (3) is the month with the most activity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 3: Make my own three queries and explain what they do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the user with the most reputation"
    ]
   },
   {
