Completed the assignment

--- a/CSCI340Databases/Project2/psqlWithLanguage.ipynb
+++ b/CSCI340Databases/Project2/psqlWithLanguage.ipynb
@@ -606,21 +606,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. "
+    "1.What is the longest question?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lq = pd.read_sql_query(\n",
+    "'''\n",
+    "    select id,body, char_length(body) from posts where posttypeid = 1 ORDER BY char_length(body) desc limit 1\n",
+    "'''\n",
+    ",engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>body</th>\n",
+       "      <th>char_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>784</td>\n",
+       "      <td>&lt;p&gt;This post is an attempt to keep track of th...</td>\n",
+       "      <td>28690</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id                                               body  char_length\n",
+       "0  784  <p>This post is an attempt to keep track of th...        28690"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p>This post is an attempt to keep track of the terms that differ between dialects of English or exist in some dialects but not others: British / Australian / Canadian / American / etc.</p>\\n\\n<p>Please note that Canada may be difficult to classify, as some regions (especially near the southern border) use US terms, while others may use UK terms.</p>\\n\\n<p>It\\'s a community wiki, so feel free to edit and clarify or add additional items. The comments are getting long, so use answers for discussion of specific concepts if necessary. If you\\'re not sure what a term means, ask it as a new question and tag it with <a href=\"https://cooking.stackexchange.com/questions/tagged/language\">language</a>)</p>\\n\\n<p>Also see <a href=\"https://cooking.stackexchange.com/q/16076/67\">What international cooking terms sound similar but have different meanings?</a> for similar issues with other languages.</p>\\n\\n<h1>Vegetables:</h1>\\n\\n<ul>\\n<li><strong>Eggplant</strong> (US, AU) is an <strong>aubergine</strong> (UK).</l...'"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using python to see the question\n",
+    "lq['body'][0][1:1000] + \"...\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2."
+    "2.Which question has the most comments?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>body</th>\n",
+       "      <th>commentcount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>784</td>\n",
+       "      <td>&lt;p&gt;This post is an attempt to keep track of th...</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id                                               body  commentcount\n",
+       "0  784  <p>This post is an attempt to keep track of th...            63"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(\n",
+    "'''\n",
+    "    select id, body, commentcount from posts where posttypeid=1 order by commentcount desc limit 1\n",
+    "'''\n",
+    ",engine)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3."
+    "3.What is the shortest time (in seconds) a question was asked and then had no activity on questions that had some answers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>body</th>\n",
+       "      <th>?column?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>85317</td>\n",
+       "      <td>&lt;p&gt;I recently bought an &lt;a href=\"http://instan...</td>\n",
+       "      <td>87.206</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                               body  ?column?\n",
+       "0  85317  <p>I recently bought an <a href=\"http://instan...    87.206"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(\n",
+    "'''\n",
+    "    select id, body, (extract(epoch from lastactivitydate) - extract(epoch from creationdate)) from posts\n",
+    "        where extract(epoch from lastactivitydate) - extract(epoch from creationdate) <> 0 \n",
+    "        and answercount >= 1 \n",
+    "        and posttypeid = 1\n",
+    "        order by extract(epoch from lastactivitydate) - extract(epoch from creationdate) asc \n",
+    "        limit 1 \n",
+    "        \n",
+    "'''\n",
+    ",engine)"
    ]
   },
   {
