--- a/CSCI340Databases/Project2/psqlWithLanguage.ipynb
+++ b/CSCI340Databases/Project2/psqlWithLanguage.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This homework assignment is about working with queries to answer questions about the data. We are working in this homework with a dataset that comes from stackoverflow (the cooking one) that is openly available. We ask and answer some interesting questions about the data in this homework assignment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
