Worked on video fiducials

--- a/CSCI340Databases/Homework1/psqlWithLanguageWithExplain.ipynb
+++ b/CSCI340Databases/Homework1/psqlWithLanguageWithExplain.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -231,68 +231,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>displayname</th>\n",
-       "      <th>ownerdisplayname</th>\n",
+       "      <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Hank</td>\n",
-       "      <td>Henry Jackson</td>\n",
+       "      <td>Hash Join  (cost=2331.62..9657.38 rows=70475 w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Artificial Stupidity</td>\n",
-       "      <td>Yasashii Eirian</td>\n",
+       "      <td>Hash Cond: (posts.owneruserid = users.id)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Netizen</td>\n",
-       "      <td>IamSJ</td>\n",
+       "      <td>Join Filter: ((users.displayname)::text &lt;&gt; p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Fahed</td>\n",
-       "      <td>Fahed Fahed</td>\n",
+       "      <td>-&gt;  Seq Scan on posts  (cost=0.00..7140.75 r...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Roux A</td>\n",
-       "      <td>Hershe A</td>\n",
+       "      <td>-&gt;  Hash  (cost=1741.83..1741.83 rows=47183 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>davidscolgan</td>\n",
-       "      <td>dvcolgan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>lamwaiman1988</td>\n",
-       "      <td>gunbuster363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Danubian Sailor</td>\n",
-       "      <td>lechlukasz</td>\n",
+       "      <td>-&gt;  Seq Scan on users  (cost=0.00..174...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            displayname ownerdisplayname\n",
-       "0                  Hank    Henry Jackson\n",
-       "1  Artificial Stupidity  Yasashii Eirian\n",
-       "2               Netizen            IamSJ\n",
-       "3                 Fahed      Fahed Fahed\n",
-       "4                Roux A         Hershe A\n",
-       "5          davidscolgan         dvcolgan\n",
-       "6         lamwaiman1988     gunbuster363\n",
-       "7       Danubian Sailor       lechlukasz"
+       "                                          QUERY PLAN\n",
+       "0  Hash Join  (cost=2331.62..9657.38 rows=70475 w...\n",
+       "1          Hash Cond: (posts.owneruserid = users.id)\n",
+       "2    Join Filter: ((users.displayname)::text <> p...\n",
+       "3    ->  Seq Scan on posts  (cost=0.00..7140.75 r...\n",
+       "4    ->  Hash  (cost=1741.83..1741.83 rows=47183 ...\n",
+       "5          ->  Seq Scan on users  (cost=0.00..174..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +281,7 @@
    "source": [
     "pd.read_sql_query(\n",
     "    '''\n",
-    "    SELECT displayname,ownerdisplayname FROM users\n",
+    "    explain SELECT displayname,ownerdisplayname FROM users\n",
     "      INNER JOIN posts ON users.id = owneruserid\n",
     "      WHERE displayname <> ownerdisplayname;\n",
     "    '''\n",
@@ -323,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -347,26 +328,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>?column?</th>\n",
+       "      <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>25673</td>\n",
-       "      <td>5</td>\n",
+       "      <td>Limit  (cost=7619.92..7619.92 rows=1 width=8) ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-&gt;  Sort  (cost=7619.92..7670.42 rows=20199 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sort Key: ((char_length(tags) - char_l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sort Method: top-N heapsort  Memory: 25kB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-&gt;  Seq Scan on posts  (cost=0.00..751...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Filter: (tags ~ '[^0-9]'::text)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Rows Removed by Filter: 50023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Planning time: 0.553 ms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Execution time: 41.031 ms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id  ?column?\n",
-       "0  25673         5"
+       "                                          QUERY PLAN\n",
+       "0  Limit  (cost=7619.92..7619.92 rows=1 width=8) ...\n",
+       "1    ->  Sort  (cost=7619.92..7670.42 rows=20199 ...\n",
+       "2          Sort Key: ((char_length(tags) - char_l...\n",
+       "3          Sort Method: top-N heapsort  Memory: 25kB\n",
+       "4          ->  Seq Scan on posts  (cost=0.00..751...\n",
+       "5                    Filter: (tags ~ '[^0-9]'::text)\n",
+       "6                      Rows Removed by Filter: 50023\n",
+       "7                            Planning time: 0.553 ms\n",
+       "8                          Execution time: 41.031 ms"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +393,7 @@
    "source": [
     "pd.read_sql_query(\n",
     "    ''' \n",
-    "    SELECT id, char_length(tags) - char_length(replace(tags,'<','')) FROM posts where tags ~ '[^0-9]' ORDER BY 2 desc LIMIT 1\n",
+    "    explain analyze SELECT id, char_length(tags) - char_length(replace(tags,'<','')) FROM posts where tags ~ '[^0-9]' ORDER BY 2 desc LIMIT 1\n",
     "    '''\n",
     "    ,engine)"
    ]
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -412,35 +431,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
+       "      <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10175</td>\n",
+       "      <td>Aggregate  (cost=7494.89..7494.90 rows=1 width...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-&gt;  Seq Scan on posts  (cost=0.00..7493.12 r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Filter: (date_part('dow'::text, creati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rows Removed by Filter: 60266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Planning time: 0.193 ms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Execution time: 26.889 ms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count\n",
-       "0  10175"
+       "                                          QUERY PLAN\n",
+       "0  Aggregate  (cost=7494.89..7494.90 rows=1 width...\n",
+       "1    ->  Seq Scan on posts  (cost=0.00..7493.12 r...\n",
+       "2          Filter: (date_part('dow'::text, creati...\n",
+       "3                      Rows Removed by Filter: 60266\n",
+       "4                            Planning time: 0.193 ms\n",
+       "5                          Execution time: 26.889 ms"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_sql_query(\n",
-    "    '''   \n",
-    "    SELECT COUNT(F.date_part) from\n",
+    "    ''' \n",
+    "    explain analyze SELECT COUNT(F.date_part) from\n",
     "        (SELECT X.date_part from\n",
     "            (SELECT EXTRACT(DOW FROM creationdate) FROM posts)\n",
-    "            as X\n",
+    "            as X \n",
     "        WHERE date_part = 5)\n",
     "        as F\n",
     "    '''\n",
@@ -456,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -480,98 +524,79 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>date_part</th>\n",
+       "      <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>46146</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Limit  (cost=15908.25..15908.27 rows=10 width=...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3794</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>-&gt;  Sort  (cost=15908.25..16083.26 rows=7000...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3721</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Sort Key: (count(*)) DESC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1903</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>Sort Method: quicksort  Memory: 25kB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1837</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>-&gt;  GroupAggregate  (cost=12991.87..14...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1775</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>Group Key: (date_part('month'::t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1726</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>-&gt;  Sort  (cost=12991.87..13168....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1704</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>Sort Key: (date_part('mont...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1682</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>Sort Method: external merg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1677</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>-&gt;  Seq Scan on posts  (co...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>1665</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>Planning time: 0.172 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>1453</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1358</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>Execution time: 59.781 ms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    count  date_part\n",
-       "0   46146        NaN\n",
-       "1    3794        3.0\n",
-       "2    3721        4.0\n",
-       "3    1903        8.0\n",
-       "4    1837       12.0\n",
-       "5    1775        7.0\n",
-       "6    1726        9.0\n",
-       "7    1704       10.0\n",
-       "8    1682        1.0\n",
-       "9    1677        2.0\n",
-       "10   1665       11.0\n",
-       "11   1453        5.0\n",
-       "12   1358        6.0"
+       "                                           QUERY PLAN\n",
+       "0   Limit  (cost=15908.25..15908.27 rows=10 width=...\n",
+       "1     ->  Sort  (cost=15908.25..16083.26 rows=7000...\n",
+       "2                           Sort Key: (count(*)) DESC\n",
+       "3                Sort Method: quicksort  Memory: 25kB\n",
+       "4           ->  GroupAggregate  (cost=12991.87..14...\n",
+       "5                 Group Key: (date_part('month'::t...\n",
+       "6                 ->  Sort  (cost=12991.87..13168....\n",
+       "7                       Sort Key: (date_part('mont...\n",
+       "8                       Sort Method: external merg...\n",
+       "9                       ->  Seq Scan on posts  (co...\n",
+       "10                            Planning time: 0.172 ms\n",
+       "11                          Execution time: 59.781 ms"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +604,7 @@
    "source": [
     "pd.read_sql_query(\n",
     "    '''\n",
-    "        select count(id),extract(month from lasteditdate) from posts group by extract(month from lasteditdate) order by count desc\n",
+    "        explain analyze select count(*),extract(month from creationdate) from posts group by extract(month from creationdate) order by count desc limit 10\n",
     "    '''\n",
     ",engine)"
    ]
