Added Project2 for Databases

--- a/CSCI340Databases/Homework1/psqlWithLanguage.ipynb
+++ b/CSCI340Databases/Homework1/psqlWithLanguage.ipynb
@@ -118,7 +118,7 @@
    ],
    "source": [
     "pd.read_sql_query(\n",
-    "    'explain SELECT title FROM Posts WHERE posttypeid = 1 ORDER BY score DESC LIMIT 5;'\n",
+    "    'SELECT title FROM Posts WHERE posttypeid = 1 ORDER BY score DESC LIMIT 5;'\n",
     "    ,engine)"
    ]
   },
@@ -194,7 +194,7 @@
    ],
    "source": [
     "pd.read_sql_query(\n",
-    "    'explain SELECT reputation,displayname FROM users ORDER BY reputation DESC LIMIT 5;'\n",
+    "    'SELECT reputation,displayname FROM users ORDER BY reputation DESC LIMIT 5;'\n",
     "    ,engine)"
    ]
   },
