updated image data fiducials video recognition

--- a/DSCI295ImageData/fiducials/circles.ipynb
+++ b/DSCI295ImageData/fiducials/circles.ipynb
@@ -260,8 +260,13 @@
     "    return the center of the contour.\n",
     "    \"\"\"\n",
     "    M = cv2.moments(cs[ic])\n",
-    "    cx = M['m10']/M['m00']\n",
-    "    cy = M['m01']/M['m00']\n",
+    "    area = M['m00']\n",
+    "    if area == 0:\n",
+    "        cx = M['m10']\n",
+    "        cy = M['m01']\n",
+    "    else:\n",
+    "        cx = M['m10']/area\n",
+    "        cy = M['m01']/area\n",
     "    return [cx,cy]\n",
     "\n",
     "def hierarchyToTopo(hs, start = -1):\n",
@@ -306,7 +311,7 @@
     "    \"\"\"\n",
     "    lines = []\n",
     "    labels = []\n",
-    "    for n,gs in [(f[1], groupby(leaves(hs,f[0],0), key=lambda x: x[1])) for f in fs]:\n",
+    "    for n,gs in [(f[1], groupby(sorted(leaves(hs,f[0],0), key=lambda x: x[1]),key=lambda x:x[1])) for f in fs]:\n",
     "        poly = np.array([np.average(np.array([mean(cs, l[0]) for l in ls[1]]),axis=0) for ls in gs], np.int32)\n",
     "        labels.append((poly[0,:], n))\n",
     "        poly = poly.reshape((-1,1,2))\n",
@@ -326,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -446,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +460,7 @@
        "(11,)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -563,48 +568,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 13, 4)\n",
-      "[[[ 1 -1 -1 -1]\n",
-      "  [ 2  0 -1 -1]\n",
-      "  [ 3  1 -1 -1]\n",
-      "  [ 4  2 -1 -1]\n",
-      "  [10  3  5 -1]\n",
+      "(1, 11, 4)\n",
+      "[[[-1 -1  1 -1]\n",
+      "  [-1 -1  2  0]\n",
+      "  [ 3 -1 -1  1]\n",
+      "  [ 4  2 -1  1]\n",
+      "  [ 7  3  5  1]\n",
       "  [ 6 -1 -1  4]\n",
-      "  [ 7  5 -1  4]\n",
-      "  [ 8  6 -1  4]\n",
-      "  [ 9  7 -1  4]\n",
-      "  [-1  8 -1  4]\n",
-      "  [-1  4 11 -1]\n",
-      "  [12 -1 -1 10]\n",
-      "  [-1 11 -1 10]]]\n"
+      "  [-1  5 -1  4]\n",
+      "  [-1  4  8  1]\n",
+      "  [ 9 -1 -1  7]\n",
+      "  [10  8 -1  7]\n",
+      "  [-1  9 -1  7]]]\n"
      ]
     }
    ],
    "source": [
     "print(np.shape(hs))\n",
-    "print(hs)"
+    "print(hs)\n",
+    "# Next, previous, first child, parent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(0)        \n",
+    "cap = cv2.VideoCapture(-1)        \n",
     "        \n",
     "while(True):\n",
     "    ret,frame = cap.read()\n",
     "    \n",
+    "    # Find the contours of each fiducial\n",
     "    cs,hs = findFiducialContours(frame,showSteps=False)\n",
     "    \n",
+    "    # Label each layer of contour with a different color and plot it on the frame\n",
     "    colors = [(255,0,0),(0,255,0),(0,0,255),(255,255,0),(255,0,255),(0,255,255)]\n",
     "    img2 = frame.copy()\n",
     "    for ic in range(len(cs)):\n",
@@ -612,7 +618,16 @@
     "        c = colors[d % len(colors)]\n",
     "        cv2.drawContours(img2, cs, ic, c, 3)\n",
     "\n",
-    "    cv2.imshow('contour depths',img2)\n",
+    "    # Label each fiducial \n",
+    "    fs = findFiducials(hs)\n",
+    "    lines, labels = fiducialLinesAndLabels(hs,cs,fs)\n",
+    "    img3 = img2.copy()\n",
+    "    drawFiducials(img3,lines,labels)\n",
+    "    \n",
+    "    cv2.imshow('contour depths',img3)\n",
+    "    \n",
+    "#     print(list(findFiducials(hs)))\n",
+    " \n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -620,6 +635,35 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fs = list(findFiducials(hs))\n",
+    "# print(fs)\n",
+    "# lines, labels = fiducialLinesAndLabels(hs,cs,fs)\n",
+    "# print(lines,labels)\n",
+    "# img = cropLarge.copy()\n",
+    "# drawFiducials(img,lines,labels)\n",
+    "# plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
